--- a/index.html
+++ b/index.html
@@ -51,88 +51,111 @@
       </div>
     </header>
     <main class="main">
-      <section class="title container">
-        <div class="title__body">
-          <h1 class="title__name">Night Trips</h1>
-          <div class="title__subtitle h6">
-            WE GOT TRIPS FOR THE TRIPPSTER IN YOU
+      <div class="background">
+        <section class="title container">
+          <div class="title__body">
+            <h1 class="title__name">Night Trips</h1>
+            <div class="title__subtitle h6">
+              WE GOT TRIPS FOR THE TRIPPSTER IN YOU
+            </div>
+            <div class="title__description">
+              <p>
+                Neque, eros commodo, nascetur ullamcorper vitae. Tincidunt ut
+                venenatis, volutpat <br />
+                lorem ut faucibus mauris, quisque. Integer gravida sed quis
+                congue. Vel risus, arcu <br />
+                a viverra leo id pulvinar ultricies. Enim in in in pulvinar
+                nulla sollicitudin. Ullamcorper.
+              </p>
+            </div>
           </div>
-          <div class="title__description">
-            <p>
-              Neque, eros commodo, nascetur ullamcorper vitae. Tincidunt ut
-              venenatis, volutpat <br />
-              lorem ut faucibus mauris, quisque. Integer gravida sed quis
-              congue. Vel risus, arcu <br />
-              a viverra leo id pulvinar ultricies. Enim in in in pulvinar nulla
-              sollicitudin. Ullamcorper.
-            </p>
+          <div class="title__extra">
+            <div class="title__scroll">SCROLL</div>
+            <div class="title__media">
+              <ul class="list list-rotate">
+                <li class="list__item list-rotate">
+                  <a href="" class="list__link">
+                    <svg
+                      width="24.000000"
+                      height="19.943848"
+                      viewBox="0 0 24 19.9438"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                    >
+                      <desc>Created with Pixso.</desc>
+                      <defs />
+                      <path
+                        id="Vector"
+                        d="M19.86 2.54C19.25 1.84 18.45 1.35 17.56 1.13C16.67 0.91 15.73 0.96 14.88 1.29C14.02 1.62 13.28 2.2 12.77 2.96C12.25 3.72 11.98 4.62 12 5.54L12 6.54C10.24 6.58 8.5 6.19 6.93 5.4C5.36 4.61 4.01 3.44 3 2.01C3 2.01 -1 11.01 8 15.01C5.94 16.4 3.48 17.1 1 17.01C10 22.01 21 17.01 21 5.51C20.99 5.23 20.97 4.95 20.92 4.68C21.94 3.67 22.66 2.4 23 1.01C22.04 1.68 20.98 2.2 19.86 2.54Z"
+                        stroke="#41EAD4"
+                        stroke-opacity="1.000000"
+                        stroke-width="2.000000"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                  <a href="" class="list__link">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M18 2H15C13.6739 2 12.4021 2.52678 11.4645 3.46447C10.5268 4.40215 10 5.67392 10 7V10H7V14H10V22H14V14H17L18 10H14V7C14 6.73478 14.1054 6.48043 14.2929 6.29289C14.4804 6.10536 14.7348 6 15 6H18V2Z"
+                        stroke="#41EAD4"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                  <a href="" class="list__link">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M23 2.99998C22.0424 3.67546 20.9821 4.19209 19.86 4.52999C19.2577 3.8375 18.4573 3.34668 17.567 3.12391C16.6767 2.90115 15.7395 2.95718 14.8821 3.28444C14.0247 3.6117 13.2884 4.19439 12.773 4.9537C12.2575 5.71302 11.9877 6.61232 12 7.52998V8.52998C10.2426 8.57555 8.50127 8.1858 6.93101 7.39543C5.36074 6.60506 4.01032 5.43862 3 3.99998C3 3.99998 -1 13 8 17C5.94053 18.398 3.48716 19.0989 1 19C10 24 21 19 21 7.49998C20.9991 7.22144 20.9723 6.94358 20.92 6.66999C21.9406 5.66348 22.6608 4.3927 23 2.99998V2.99998Z"
+                        stroke="#41EAD4"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="title__extra">
-          <div class="title__scroll">SCROLL</div>
-          <div class="title__media">
-            <ul class="list list-rotate">
-              <li class="list__item list-rotate">
-                <a href="" class="list__link">
-                  <svg
-                    width="24.000000"
-                    height="19.943848"
-                    viewBox="0 0 24 19.9438"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                  >
-                    <desc>Created with Pixso.</desc>
-                    <defs />
-                    <path
-                      id="Vector"
-                      d="M19.86 2.54C19.25 1.84 18.45 1.35 17.56 1.13C16.67 0.91 15.73 0.96 14.88 1.29C14.02 1.62 13.28 2.2 12.77 2.96C12.25 3.72 11.98 4.62 12 5.54L12 6.54C10.24 6.58 8.5 6.19 6.93 5.4C5.36 4.61 4.01 3.44 3 2.01C3 2.01 -1 11.01 8 15.01C5.94 16.4 3.48 17.1 1 17.01C10 22.01 21 17.01 21 5.51C20.99 5.23 20.97 4.95 20.92 4.68C21.94 3.67 22.66 2.4 23 1.01C22.04 1.68 20.98 2.2 19.86 2.54Z"
-                      stroke="#41EAD4"
-                      stroke-opacity="1.000000"
-                      stroke-width="2.000000"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </a>
-                <a href="" class="list__link">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M18 2H15C13.6739 2 12.4021 2.52678 11.4645 3.46447C10.5268 4.40215 10 5.67392 10 7V10H7V14H10V22H14V14H17L18 10H14V7C14 6.73478 14.1054 6.48043 14.2929 6.29289C14.4804 6.10536 14.7348 6 15 6H18V2Z"
-                      stroke="#41EAD4"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </a>
-                <a href="" class="list__link">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M23 2.99998C22.0424 3.67546 20.9821 4.19209 19.86 4.52999C19.2577 3.8375 18.4573 3.34668 17.567 3.12391C16.6767 2.90115 15.7395 2.95718 14.8821 3.28444C14.0247 3.6117 13.2884 4.19439 12.773 4.9537C12.2575 5.71302 11.9877 6.61232 12 7.52998V8.52998C10.2426 8.57555 8.50127 8.1858 6.93101 7.39543C5.36074 6.60506 4.01032 5.43862 3 3.99998C3 3.99998 -1 13 8 17C5.94053 18.398 3.48716 19.0989 1 19C10 24 21 19 21 7.49998C20.9991 7.22144 20.9723 6.94358 20.92 6.66999C21.9406 5.66348 22.6608 4.3927 23 2.99998V2.99998Z"
-                      stroke="#41EAD4"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
+        </section>
+        <span class="effect__line1"></span>
+        <span class="effect__line2"></span>
+        <span class="effect__line3"></span>
+        <span class="effect__line4"></span>
+        <span class="effect__line5"></span>
+        <span class="effect__line6"></span>
+        <span class="effect__line7"></span>
+        <span class="effect__line8"></span>
+        <span class="effect__line9"></span>
+        <span class="effect__line10"></span>
+        <span class="effect__line11"></span>
+        <span class="effect__line12"></span>
+        <span class="effect__line13"></span>
+      </div>
+      <!-- <section class="page">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          dicta velit rerum, earum obcaecati, voluptatum odit facilis
+          voluptatibus rem magni culpa laudantium. Inventore ipsum aut tempora
+          odio deleniti laborum? Voluptas?
+        </p>
+      </section> -->
     </main>
     <footer>
       <p>1</p>
